[project]
name = "colab-ws"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=1.3.10",
    "langgraph>=1.2.6",
    "numpy>=2.4.6",
    "pandas>=3.0.3",
    "pyarrow>=24.0.0",
    "scikit-learn>=1.9.0",
    "scipy>=1.18.0",
]

[tool.setuptools.packages.find]
where = ["src"]